@@ -4,7 +4,7 @@
 use strict;
 
 #load test
-use Test::More tests => 8;
+use Test::More tests => 12;
 
 # load modules
 BEGIN {
@@ -48,6 +48,37 @@ is( $ra, "148.888", "Comparing RA" );
 my $dec = $object->dec( );
 is( $dec, "69.065", "Comparing Dec" );
 
+my $ra_return = "\$VAR1 = 'value';\n".
+		"\$VAR2 = '148.888';\n".
+		"\$VAR3 = 'error';\n".
+		"\$VAR4 = {\n".
+		"          'value' => '4',\n".
+		"          'units' => 'arcmin'\n".
+		"        };\n".
+		"\$VAR5 = 'units';\n".
+		"\$VAR6 = 'deg';\n";
+		
+my %ra = $object->ra( );
+is( Dumper(%ra), $ra_return, "Comparing RA in list context" );
+
+my $dec_return = "\$VAR1 = 'value';\n".
+		"\$VAR2 = '69.065';\n".
+		"\$VAR3 = 'error';\n".
+		"\$VAR4 = {\n".
+		"          'value' => '4',\n".
+		"          'units' => 'arcmin'\n".
+		"        };\n".
+		"\$VAR5 = 'units';\n".
+		"\$VAR6 = 'deg';\n";
+		
+my %dec = $object->dec( );
+is( Dumper(%dec), $dec_return, "Comparing Dec in list context" );
+
+my $epoch = $object->epoch( );
+is( $epoch, "J2000.0", "Comparing Epoch" );
+
+my $equinox = $object->equinox( );
+is( $equinox, "2000.0", "Comparing Equinox" );
 
 # T I M E   A T   T H E   B A R ---------------------------------------------
 
